fix picture layout bug

--- a/source/css/main.css
+++ b/source/css/main.css
@@ -634,7 +634,7 @@ h1.prince-log a {
   text-decoration: none;
   border: none;
   width: 125%;
-  margin: 0 0 0 -100px;
+  margin: 0 0 0 -12.5%;
   text-align: center;
 }
 
